--- a/backend-apis/package.json
+++ b/backend-apis/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.11.1",
     "express": "^4.19.1",
