--- a/backend-apis/package.json
+++ b/backend-apis/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "backend-apis",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "ethers": "^6.11.1",
-    "express": "^4.19.1",
-    "nodemon": "^3.1.0"
-  }
+    "name": "backend-apis",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "crypto": "^1.0.1",
+        "dotenv": "^16.4.5",
+        "ethers": "^6.11.1",
+        "express": "^4.19.1",
+        "nodemon": "^3.1.0",
+        "cors": "^2.8.5"
+    }
 }
