--- a/backend-apis/package.json
+++ b/backend-apis/package.json
@@ -5,11 +5,12 @@
     "license": "MIT",
     "dependencies": {
         "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "ethers": "^6.11.1",
         "express": "^4.19.1",
-        "nodemon": "^3.1.0",
-        "cors": "^2.8.5"
+        "morgan": "^1.10.0",
+        "nodemon": "^3.1.0"
     }
 }
