--- a/backend-apis/package.json
+++ b/backend-apis/package.json
@@ -4,11 +4,12 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
+        "axios": "^1.7.2",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
-        "ethers": "^6.11.1",
+        "ethers": "^6.13.1",
         "express": "^4.19.1",
         "morgan": "^1.10.0",
         "nodemon": "^3.1.0"
