updated pol provider

--- a/backend-apis/.env.example
+++ b/backend-apis/.env.example
@@ -1,4 +1,16 @@
-PRIVATE_KEY=59ce9XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-PORT=3000
-API_KEY=hj6YvuqEX8zop2Wtjnh3A4rXdpT-C0j9
-CONTRACT_ADDRESS='0xC83B3C43908b598c07C88680461E91c43836e30E'
+PRIVATE_KEY= #wallet
+
+BASE_NFT_CONTRACT_ADDRESS=
+REFERRAL_NFT_CONTRACT_ADDRESS=
+
+ETH_GREELANCE_TOKEN=
+POL_GREELANCE_TOKEN= 
+
+ALCHEMY_API_KEY=
+ETH_ALCHEMY_HTTP_ENDPOINT=
+POL_ALCHEMY_HTTP_ENDPOINT=
+
+
+SECRET_KEY= 
+
+COINMARKETCAP_API_KEY =
